--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
+* {
+    margin: 0;
+    padding: 0;
+
+    box-sizing: border-box;
+}
+
 #map {
     width: 100%;
     height: 100vh;
+}
+
+.page-wrapper {
+    width: 100%;
+    height: 100vh;
+}
+
+:root {
+    --hover-color: rgb(135, 255, 135);
 }
