--- a/src/components/ShopItem.css
+++ b/src/components/ShopItem.css
@@ -1,6 +1,7 @@
 .shop-item-container {
     width: 100%;
     max-width: 600px;
+    height: 120px;
 
     margin: 50px auto;
 
@@ -18,10 +19,10 @@
 }
 
 .shop-item-img {
-    width: 5rem;
-    height: 5rem;
+    width: 80px;
+    height: 80px;
 
-    background-color: black;
+    /* background-color: black; */
 
     display: flex;
     justify-content: center;
@@ -30,11 +31,16 @@
     margin-left: 1rem;
 }
 
+.shop-item-img img {
+    width: 80px;
+    height: 80px;
+    object-fit: scale-down;
+}
+
 .shop-item-info {
     flex-grow: 3;
     padding: 15px;
-}
-.shop-item-info h3 {
+    overflow: hidden;
 }
 
 .shop-item-icon {
